@@ -1,3 +1,10 @@
+2006-07-03  Karl Lehenbauer  <karl-rivet@sc.com>
+        * rivet/packages/dio/dio_Postgresql.tcl: when handling a PostgreSQL
+	  result, if numrows is zero, see if cmdTuples
+	  (Pg_result $resultHandle -cmdTuples) contains anything, and if it 
+	  does, put that in of numrows, hiding a PostgreSQL interface
+	  quirk from DIO.
+
 2006-06-07  David N. Welton  <davidw@dedasys.com>
 
 	* rivet/packages/session/session-create-mysql.sql: Minor update
